<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


























    <com.khodmohaseb.parkban.controls.PersianTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/submit_card_dialog_1"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />


    <com.khodmohaseb.parkban.controls.PersianTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/submit_card_dialog_2"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        android:textStyle="normal" />










    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_all">


        <LinearLayout
            android:id="@+id/cancel_layout_write_on_card"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/red"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <com.khodmohaseb.parkban.controls.PersianTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/submit_card_dialog_3"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp" />



        </LinearLayout>


    </LinearLayout>






</LinearLayout>